--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
-    "presets": [
-      ["env", { "modules": false }],
-      "react"
-    ]
-  }
+  "plugins": [
+    "transform-class-properties",
+    "react-css-modules"
+  ],
+  "presets": [
+    ["env",{"modules": false}],
+    "react"
+  ]
+}
