--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "draft-js": "^0.10.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
@@ -18,8 +19,11 @@
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-react-css-modules": "^3.3.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
@@ -27,6 +31,7 @@
     "eslint-plugin-react": "^7.4.0",
     "express": "^4.16.2",
     "nodemon": "^1.12.1",
+    "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0"
   }
